Prevent infobox details to shrink on mobile

--- a/src/style/infobox.css
+++ b/src/style/infobox.css
@@ -139,6 +139,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px 10px 0 10px;
+  flex-shrink: 0;
 }
 .infobox-text-wrapper {
   display: flex;
@@ -291,12 +292,18 @@
   align-items: center;
   justify-content: flex-start;
   padding: 10px 10px 10px 18px;
+  flex-shrink: 0;
 }
 .search_layers:focus {
   border: 2px solid blue;
 }
 .infobox-switch-text {
   font-size: 14px;
+}
+@media only screen and (max-width: 768px) {
+  .search-layers-button-wrapper {
+    padding: 3px 10px 7px 18px;
+  }
 }
 
 /* Felt øverst et åpnet underelement  */
